--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -6,6 +6,8 @@
 $nb-themes: nb-register-theme((
   layout-padding-top: 2.25rem,
 
+  scrollbar-width: 0.6125rem,
+
   menu-item-icon-margin: 0 0.5rem 0 0,
 
   card-height-tiny: 13.5rem,
